  - GT-252, ST_NumGeometries/ST_GeometryN treat TIN and PolyhedralSurface as unitary geometries,
    use ST_NumPatches/ST_PatchN for patch access (Loïc Bartoletti)
  - #3110, GT-242 [topology] Support for bigint (Ayo Adesugba, U.S. Census Bureau)
  - #5359, #5897, GT-260 [tiger_geocoder] Use @extschema:extension@ for PG >= 16
    to schema qualify dependent extensions, switch to use typmod for tiger tables
    (Regina Obe)

* Deprecated / Removed signatures * 

 - #3110, GT-242, [topology] numerous topology functions that accepted integer 
          replaced with bigint versions to support both integer and bigint inputs
          (Ayo Adesugba, U.S. Census Bureau)


* New Features *

  - GH-803, [sfcgal] ADD CG_Simplify function (Loïc Bartoletti)
  - GH-805, [sfcgal] Add M support for SFCGAL >= 1.5.0 (Loïc Bartoletti)
  - GH-801, [sfcgal] ADD CG_3DAlphaWrapping function (Jean Felder)
  - #5894, [topology] TotalTopologySize (Sandro Santilli)
  - #5890, [topology] ValidateTopologyPrecision, MakeTopologyPrecise (Sandro Santilli)
  - #5861, [topology] Add --drop-topology switch to pgtopo_import (Sandro Santilli)
  - #1247, [raster] ST_AsRasterAgg (Sandro Santilli)
  - #5784, GT-223 Export circ_tree_distance_tree_internal for mobilitydb use
           (Maxime Schoemans)
  - GT-228, [sfcgal] Add new functions (Scale, Translate, Rotate, Buffer 3D and
           Straight Skeleton Partition) from SFCGAL 2 (Loïc Bartoletti)
  - [raster] New GUC postgis.gdal_cpl_debug, enables GDAL debugging messages
    and routes them into the PostgreSQL logging system. (Paul Ramsey)
  - #5841, Change interrupt handling to remove use of pqsignal to support PG 18 (Paul Ramsey)
  - Add ST_CoverageClean to edge match and gap remove polygonal
    coverages (Paul Ramsey) from GEOS 3.14 (Martin Davis)
  - Add ST_ReclassExact to quickly remap values in raster (Paul Ramsey)
  - #3110, GT-242 [topology] Support for bigint (Ayo Adesugba, U.S. Census Bureau)
